Fixing disappearing search button on mobile

--- a/css/src/off-canvas/_search.css
+++ b/css/src/off-canvas/_search.css
@@ -2,7 +2,7 @@
     .search-container {
         display: block;
 
-        @media (--menu-button-query) {
+        @media (--menu-query) {
             display: none;
         }
 
